prevent cover stretching

--- a/static/css/components/carousel.less
+++ b/static/css/components/carousel.less
@@ -18,6 +18,7 @@
 .carousel-container {
   margin: 0 -20px;
   padding: 3px 15px;
+  object-fit: contain;
 }
 
 .carousel {
@@ -25,6 +26,7 @@
   margin-bottom: 15px;
   overflow-x: scroll;
   padding: 10px 20px;
+  object-fit: contain;
 
   a,
   a:link {
