--- a/static/css/components/listLists.less
+++ b/static/css/components/listLists.less
@@ -26,6 +26,7 @@ ul.listLists {
       width: 42px;
       min-height: 35px;
       padding: 0 10px;
+      object-fit: contain;
       /* stylelint-disable max-nesting-depth */
       img {
         width: 32px;
