--- a/static/css/components/lists-page-cta.less
+++ b/static/css/components/lists-page-cta.less
@@ -25,5 +25,6 @@
     background-position: 35px 35px;
     padding-left: 130px;
     padding-right: 60px;
+    object-fit: contain;
   }
 }
