--- a/static/css/components/mybooks.less
+++ b/static/css/components/mybooks.less
@@ -9,6 +9,7 @@
 .mybooks {
   border-top: 1px solid @lightest-grey;
   margin-top: 10px;
+  object-fit: contain;
 }
 @media only screen and (min-width: @width-breakpoint-tablet) {
   .mybooks {
